function/operation/pattern_search/antlr/PatternParser.py
# Generated from Pattern.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class PatternParser ( Parser ):

    grammarFileName = "Pattern.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "':'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'>'", "'<'", 
                     "'='", "'-'", "' '" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "WORD", "FIELD", "ID", "INT", "SPL", "MOR", "LES", 
                      "EQU", "SCO", "SPC", "WS" ]

    RULE_prog = 0
    RULE_expr = 1
    RULE_req = 2
    RULE_field = 3

    ruleNames =  [ "prog", "expr", "req", "field" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    WORD=4
    FIELD=5
    ID=6
    INT=7
    SPL=8
    MOR=9
    LES=10
    EQU=11
    SCO=12
    SPC=13
    WS=14

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(PatternParser.ExprContext,0)


        def SPL(self):
            return self.getToken(PatternParser.SPL, 0)

        def field(self):
            return self.getTypedRuleContext(PatternParser.FieldContext,0)


        def getRuleIndex(self):
            return PatternParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = PatternParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 8
            self.expr()
            self.state = 9
            self.match(PatternParser.SPL)
            self.state = 10
            self.field()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def req(self):
            return self.getTypedRuleContext(PatternParser.ReqContext,0)


        def expr(self):
            return self.getTypedRuleContext(PatternParser.ExprContext,0)


        def WORD(self):
            return self.getToken(PatternParser.WORD, 0)

        def getRuleIndex(self):
            return PatternParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = PatternParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expr)
        self._la = 0 # Token type
        try:
            self.state = 22
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PatternParser.T__0]:
                self.enterOuterAlt(localctx, 1)
                self.state = 12
                self.match(PatternParser.T__0)
                self.state = 13
                self.req()
                self.state = 14
                self.match(PatternParser.T__1)
                self.state = 16
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==PatternParser.T__0 or _la==PatternParser.WORD:
                    self.state = 15
                    self.expr()


                pass
            elif token in [PatternParser.WORD]:
                self.enterOuterAlt(localctx, 2)
                self.state = 18
                self.match(PatternParser.WORD)
                self.state = 20
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==PatternParser.T__0 or _la==PatternParser.WORD:
                    self.state = 19
                    self.expr()


                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ReqContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PatternParser.RULE_req

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class OP0Context(ReqContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PatternParser.ReqContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(PatternParser.ID, 0)
        def LES(self):
            return self.getToken(PatternParser.LES, 0)
        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(PatternParser.INT)
            else:
                return self.getToken(PatternParser.INT, i)
        def EQU(self):
            return self.getToken(PatternParser.EQU, 0)
        def SCO(self):
            return self.getToken(PatternParser.SCO, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOP0" ):
                listener.enterOP0(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOP0" ):
                listener.exitOP0(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOP0" ):
                return visitor.visitOP0(self)
            else:
                return visitor.visitChildren(self)



    def req(self):

        localctx = PatternParser.ReqContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_req)
        try:
            localctx = PatternParser.OP0Context(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            self.match(PatternParser.ID)
            self.state = 32
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PatternParser.LES]:
                self.state = 25
                self.match(PatternParser.LES)
                self.state = 26
                self.match(PatternParser.INT)
                pass
            elif token in [PatternParser.EQU]:
                self.state = 27
                self.match(PatternParser.EQU)
                self.state = 28
                self.match(PatternParser.INT)
                pass
            elif token in [PatternParser.INT]:
                self.state = 29
                self.match(PatternParser.INT)
                self.state = 30
                self.match(PatternParser.SCO)
                self.state = 31
                self.match(PatternParser.INT)
                pass
            elif token in [PatternParser.T__1]:
                pass
            else:
                pass
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FieldContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PatternParser.RULE_field

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FIELD0Context(FieldContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PatternParser.FieldContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FIELD(self):
            return self.getToken(PatternParser.FIELD, 0)
        def WORD(self, i:int=None):
            if i is None:
                return self.getTokens(PatternParser.WORD)
            else:
                return self.getToken(PatternParser.WORD, i)
        def field(self):
            return self.getTypedRuleContext(PatternParser.FieldContext,0)

        def SPL(self, i:int=None):
            if i is None:
                return self.getTokens(PatternParser.SPL)
            else:
                return self.getToken(PatternParser.SPL, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFIELD0" ):
                listener.enterFIELD0(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFIELD0" ):
                listener.exitFIELD0(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFIELD0" ):
                return visitor.visitFIELD0(self)
            else:
                return visitor.visitChildren(self)


    class FIELD1Context(FieldContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PatternParser.FieldContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def EOF(self):
            return self.getToken(PatternParser.EOF, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFIELD1" ):
                listener.enterFIELD1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFIELD1" ):
                listener.exitFIELD1(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFIELD1" ):
                return visitor.visitFIELD1(self)
            else:
                return visitor.visitChildren(self)



    def field(self):

        localctx = PatternParser.FieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_field)
        self._la = 0 # Token type
        try:
            self.state = 49
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PatternParser.FIELD]:
                localctx = PatternParser.FIELD0Context(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 34
                self.match(PatternParser.FIELD)
                self.state = 35
                self.match(PatternParser.T__2)
                self.state = 36
                self.match(PatternParser.WORD)
                self.state = 41
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 37
                        self.match(PatternParser.SPL)
                        self.state = 38
                        self.match(PatternParser.WORD) 
                    self.state = 43
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==PatternParser.SPL:
                    self.state = 44
                    self.match(PatternParser.SPL)


                self.state = 47
                self.field()
                pass
            elif token in [PatternParser.EOF]:
                localctx = PatternParser.FIELD1Context(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 48
                self.match(PatternParser.EOF)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





